--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,21 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.modal-bg {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  left: 0;
+  top: 0;
+}
+
+.modal {
+  z-index: 1;
+  position: absolute;
+  border: 1px solid white;
+  background-color: black;
+  width: 800px;
+  left: calc((100vw - 800px) / 2);
+}
