--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,399 @@
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-primary: #145214;
+  --color-primary-light: #196619;
+  --color-primary-bg-light: #eafaea;
+  --color-primary-bg-mid: #c1f0c1;
+  --color-grey-bg-light: #f2f2f2;
+  --color-grey-bg-mid: #cccccc;
+  --color-text-block-hover: #ddd;
+  --color-text-block-0: #ccc;
+  --color-text-block-1: red;
+  --color-text-block-2: yellow;
+  --color-text-block-3: green;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.m0-5 {
+  margin: 0.5rem;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.mv0-5 {
+  margin: 0.5rem 0;
+}
+
+.mh0-5 {
+  margin: 0 0.5rem;
+}
+
+.mt0-5 {
+  margin-top: 0.5rem;
+}
+
+.mr0-5 {
+  margin-right: 0.5rem;
+}
+
+.mb0-5 {
+  margin-bottom: 0.5rem;
+}
+
+.ml0-5 {
+  margin-left: 0.5rem;
+}
+
+.m1 {
+  margin: 1rem;
+}
+
+.mv1 {
+  margin: 1rem 0;
+}
+
+.mh1 {
+  margin: 0 1rem;
+}
+
+.mt1 {
+  margin-top: 1rem;
+}
+
+.mr1 {
+  margin-right: 1rem;
+}
+
+.mb1 {
+  margin-bottom: 1rem;
+}
+
+.ml1 {
+  margin-left: 1rem;
+}
+
+.m2 {
+  margin: 2rem;
+}
+
+.mv2 {
+  margin: 2rem 0;
+}
+
+.mh2 {
+  margin: 0 2rem;
+}
+
+.mt2 {
+  margin-top: 2rem;
+}
+
+.mr2 {
+  margin-right: 2rem;
+}
+
+.mb2 {
+  margin-bottom: 2rem;
+}
+
+.ml2 {
+  margin-left: 2rem;
+}
+
+.p1 {
+  padding: 1rem;
+}
+
+.pv1 {
+  padding: 1rem 0;
+}
+
+.ph1 {
+  padding: 0 1rem;
+}
+
+.pt1 {
+  padding-top: 1rem;
+}
+
+.pr1 {
+  padding-right: 1rem;
+}
+
+.pb1 {
+  padding-bottom: 1rem;
+}
+
+.pl1 {
+  padding-left: 1rem;
+}
+
+.p2 {
+  padding: 2rem;
+}
+
+.pv2 {
+  padding: 2rem 0;
+}
+
+.ph2 {
+  padding: 0 2rem;
+}
+
+.pt2 {
+  padding-top: 2rem;
+}
+
+.pr2 {
+  padding-right: 2rem;
+}
+
+.pb2 {
+  padding-bottom: 2rem;
+}
+
+.pl2 {
+  padding-left: 2rem;
+}
+
+.font-s {
+  font-size: 0.8rem;
+}
+
+.font-m {
+  font-size: 1rem;
+}
+
+.font-l {
+  font-size: 1.2rem;
+}
+
+.font-red {
+  color: red;
+}
+
+.font-grey {
+  color: grey;
+}
+
+.font-height-l {
+  line-height: 1.5;
+}
+
+.border-light {
+  border: 1px solid #ccc;
+}
+
+.border-b-light {
+  border-bottom: 1px solid #ccc;
+}
+
+.border-mid {
+  border: 1px solid #888;
+}
+
+.border-b-mid {
+  border-bottom: 1px solid #888;
+}
+
+.border-dark {
+  border: 1px solid black;
+}
+
+.border-b-dark {
+  border-bottom: 1px solid black;
+}
+
+.border-radius {
+  border-radius: 2rem;
+}
+
+.bg-light {
+  background-color: var(--color-primary-bg-light);
+}
+
+.bg-dark {
+  background-color: #888;
+}
+
+.btn {
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  user-select: none;
+  transition: all 0.1s;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn-large {
+  height: 3rem;
+  width: 6rem;
+  border-radius: 1.5rem;
+}
+
+.btn-xlarge {
+  height: 4rem;
+  width: 12rem;
+  border-radius: 2rem;
+}
+
+.btn-primary {
+  background-color: var(--color-primary);
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: var(--color-primary-light);
+}
+
+.input {
+  display: flex;
+  border-bottom: 1px solid black;
+}
+
+.input-m {
+  padding: 0.5rem 0;
+  width: 12rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.grow {
+  display: flex;
+  flex-grow: 1;
+}
+
+.align-center {
+  display: flex;
+  align-items: center;
+}
+
+.justify-center {
+  display: flex;
+  justify-content: center;
+}
+
+.justify-end {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.justify-space-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+.space-around {
+  display: flex;
+  justify-content: space-around;
+}
+
+.w100p {
+  width: 100%;
+}
+
+.w50p {
+  width: 50%;
+}
+
+.w200 {
+  width: 200px;
+}
+
+.w350 {
+  width: 350px;
+}
+
+.w-fit-content {
+  width: fit-content;
+}
+
+.h100p {
+  height: 100%;
+}
+
+.h50p {
+  height: 50%;
+}
+
+.h100 {
+  height: 100px;
+}
+
+.h600 {
+  height: 600px;
+}
+
+.h800 {
+  height: 800px;
+}
+
+/* specific classes */
+.text-block:not(.text-block-0, .text-block-1, .text-block-2, .text-block-3):hover {
+  cursor: pointer;
+  border-bottom: 3px solid var(--color-text-block-hover);
+}
+
+.text-block-0 {
+  border-bottom: 3px solid var(--color-primary);
+}
+
+.text-block-1 {
+  border-bottom: 3px solid var(--color-primary);
+}
+
+.text-block-2 {
+  border-bottom: 3px solid var(--color-primary);
+}
+
+.text-block-3 {
+  border-bottom: 3px solid var(--color-primary);
+}
+
+.scroll {
+  overflow: scroll;
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0px;
+}
+
+.hover-bg-light:hover {
+  background-color: var(--color-primary-bg-light);
+  transition: background-color .2s;
+}
+
+.hover-pointer:hover {
+  cursor: pointer;
+}
+
+.hover-icon-red:hover {
+  color: red;
+}
+
+.icon-primary-mid {
+  color: var(--color-primary-bg-mid);
+}
+
+.icon-hover {
+  color: var(--color-grey-bg-light);
+}
+
+.icon-hover:hover {
+  color: var(--color-primary-bg-mid);
+}
+
+.icon-l {
+  font-size: 2rem;
 }
 
 .modal-bg {
@@ -34,8 +408,30 @@ body {
 .modal {
   z-index: 1;
   position: absolute;
-  border: 1px solid white;
-  background-color: black;
+  background-color: white;
   width: 800px;
   left: calc((100vw - 800px) / 2);
+  top: 200px;
+}
+
+/* override default styles */
+input {
+  border: none;
+  outline: none;
+}
+
+textarea {
+  resize: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  outline: none;
+}
+
+p {
+  margin-top: 0;
+}
+
+table {
+  border-collapse: collapse;
 }
